--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
 
 
     <main>
-        <div>
+        <div class="row">
             <div class="container first-segment">
                 <div class="box box-img"></div>
                 <div class="box box-text"></div> 
             </div>
         </div>
-        <div class="back-grey">
+        <div class="row back-grey">
             <div class="container second-segment">
                 <div class="box box-img"></div>
                 <div class="box box-text"></div> 
             </div>
         </div>
-        <div>
+        <div class="row">
             <div class="container first-segment">
                 <div class="box box-img"></div>
                 <div class="box box-text"></div> 
             </div>
         </div>
-        <div class="back-grey">
+        <div class="row back-grey">
             <div class="container fourth-segment">
                 <div class="box green-box"></div>
             </div>
