header and start main

--- a/index.html
+++ b/index.html
@@ -8,25 +8,30 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div>
             <div class="header-top">
-                <nav class="menu">
-                    <div class="box menu-logo">logo</div>
-                    <div class="box menu-link">
-                        <span><a href="#">link</a></span>
-                        <span><a href="#">link</a></span>
-                        <span><a href="#">link</a></span>
-                        <span><a href="#">link</a></span>
-                        <span><a href="#">link</a></span>
+                <nav class="container menu">
+                    <div class="menu-logo"><img src="./img/logo.svg" alt=""></div>
+                    <div class="menu-link">
+                        <span><a href="#">Scarica</a></span>
+                        <span><a href="#">Perchè Discord</a></span>
+                        <span><a href="#">Nitro</a></span>
+                        <span><a href="#">Sicurezza</a></span>
+                        <span><a href="#">Assistenza</a></span>
                     </div>
-                    <div class="box menu-login">login</div>
+                    <button class="button-white">Accedi</button>
                 </nav>
             </div>
 
         </div>
         
         <div class="header-bottom">
-            <div class="box purple-box"></div>
+            <div class="container">
+                <h1>Il tuo posto per parlare</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, debitis voluptatum omnis ut dignissimos nostrum aut harum nam animi accusantium est! Quasi quod, harum nobis nihil dignissimos alias at obcaecati.</p>
+                <button class="button-white">&darr;	Scarica per Mac</button>
+                <button class="button-black">Apri Discord nel tuo browser</button>
+            </div>
         </div>
         
     </header>
@@ -36,32 +41,45 @@
     <main>
         <div class="row">
             <div class="container first-segment">
-                <div class="box box-img"></div>
-                <div class="box box-text"></div> 
+                <div class="box-img"><img src="./img/item1.svg" alt=""></div>
+                <div class="box-text">
+                    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, vel tenetur!</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptatem ratione dolore aut, maxime consequuntur iusto sed. Laborum dicta deserunt sapiente maxime? Blanditiis, at corporis.</p>
+                </div> 
             </div>
         </div>
         <div class="row back-grey">
             <div class="container second-segment">
-                <div class="box box-img"></div>
-                <div class="box box-text"></div> 
+                <div class="box-img"><img src="./img/item2.svg" alt=""></div>
+                <div class="box-text">
+                    <h1>Dove trovarsi è facile</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, temporibus harum? Ad vel dolore labore quo facere natus est consequuntur laudantium, culpa distinctio tenetur quisquam!</p>
+                </div> 
             </div>
         </div>
         <div class="row">
             <div class="container first-segment">
-                <div class="box box-img"></div>
-                <div class="box box-text"></div> 
+                <div class="box-img"><img src="./img/item3.svg" alt=""></div>
+                <div class="box-text">
+                    <h1>Da pochi a un fandom</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolorum voluptas recusandae expedita aliquid pariatur quibusdam culpa. Nam qui, repudiandae molestiae sit nulla architecto eum.</p>
+                </div> 
             </div>
         </div>
         <div class="row back-grey">
             <div class="container fourth-segment">
-                <div class="box green-box"></div>
+                <div class="green-box">
+                    <h1>Tecnologia affidabile per tenersi in contatto</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vero eum eaque cumque tenetur delectus in, ut error excepturi doloribus! Quae incidunt, iusto voluptatem fuga cumque labore soluta saepe! Dicta.rem25</p>
+                    <img src="./img/item4-big.svg" alt="">
+                </div>
             </div>
 
         </div>
     </main>
     <footer>
         <div class="container footer-content">
-            <div class="box pink-box"></div>
+            <div class="pink-box"></div>
             <div class="aqua-box"></div>
             <div class="aqua-box"></div>
             <div class="aqua-box"></div>
