--- a/index.html
+++ b/index.html
@@ -99,10 +99,57 @@
                 </div>
 
             </div>
-            <div class="aqua-box"></div>
-            <div class="aqua-box"></div>
-            <div class="aqua-box"></div>
-            <div class="aqua-box"></div>
+            <div class="aqua-box">
+                <h5>Prodotto</h5>
+                <div>
+                    <ul>
+                        <li>Scarica</li>
+                        <li>Perchè Discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="aqua-box">
+                <h5>Compagnia</h5>
+                <div>
+                    <ul>
+                        <li>Chi siamo</li>
+                        <li>Lavora con noi</li>
+                        <li>Risorse</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="aqua-box">
+                <h5>Risorse</h5>
+                <div>
+                    <ul>
+                        <li>Scarica</li>
+                        <li>Perchè Discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                        <li>Lorem.</li>
+                        <li>Blanditiis.</li>
+                        <li>Ducimus!</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="aqua-box">
+                <h5>Norme</h5>
+                <div>
+                    <ul>
+                        <li>Scarica</li>
+                        <li>Perchè Discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="container last-block">
             <div class="end-page">
