--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         </div>
         <div class="container last-block">
             <div class="end-page">
-                <div class="end-logo">logo</div>
-                <button class="end-button">button</button>
+                <div class="end-logo"><img src="./img/logo.svg" alt=""></div>
+                <button class="button-white">Registrati</button>
 
             </div>
         </div>
