--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="header-bottom">
             <div class="container">
                 <h1>Il tuo posto per parlare</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, debitis voluptatum omnis ut dignissimos nostrum aut harum nam animi accusantium est! Quasi quod, harum nobis nihil dignissimos alias at obcaecati.</p>
+                <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità asrtistica monndiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
                 <button class="button-white">&darr;	Scarica per Mac</button>
                 <button class="button-black">Apri Discord nel tuo browser</button>
             </div>
@@ -44,8 +44,8 @@
             <div class="container first-segment">
                 <div class="box-img"><img src="./img/item1.svg" alt=""></div>
                 <div class="box-text">
-                    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, vel tenetur!</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt voluptatem ratione dolore aut, maxime consequuntur iusto sed. Laborum dicta deserunt sapiente maxime? Blanditiis, at corporis.</p>
+                    <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
                 </div> 
             </div>
         </div>
@@ -54,7 +54,7 @@
                 <div class="box-img"><img src="./img/item2.svg" alt=""></div>
                 <div class="box-text">
                     <h1>Dove trovarsi è facile</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, temporibus harum? Ad vel dolore labore quo facere natus est consequuntur laudantium, culpa distinctio tenetur quisquam!</p>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unursi istantaneamente senza dover chiamare</p>
                 </div> 
             </div>
         </div>
@@ -63,7 +63,7 @@
                 <div class="box-img"><img src="./img/item3.svg" alt=""></div>
                 <div class="box-text">
                     <h1>Da pochi a un fandom</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolorum voluptas recusandae expedita aliquid pariatur quibusdam culpa. Nam qui, repudiandae molestiae sit nulla architecto eum.</p>
+                    <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri poteri speciali, crea canali privati, e molto altro.</p>
                 </div> 
             </div>
         </div>
@@ -71,7 +71,7 @@
             <div class="container fourth-segment">
                 <div class="green-box">
                     <h1>Tecnologia affidabile per tenersi in contatto</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit vero eum eaque cumque tenetur delectus in, ut error excepturi doloribus! Quae incidunt, iusto voluptatem fuga cumque labore soluta saepe! Dicta.rem25</p>
+                    <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                     <img src="./img/item4-big.svg" alt="">
                 </div>
             </div>
@@ -117,9 +117,9 @@
                     <ul>
                         <li>Chi siamo</li>
                         <li>Lavora con noi</li>
-                        <li>Risorse</li>
-                        <li>Sicurezza</li>
-                        <li>Assistenza</li>
+                        <li>Marchio</li>
+                        <li>Redazione</li>
+                        <li>Negozio</li>
                     </ul>
                 </div>
             </div>
@@ -132,9 +132,9 @@
                         <li>Nitro</li>
                         <li>Sicurezza</li>
                         <li>Assistenza</li>
-                        <li>Lorem.</li>
-                        <li>Blanditiis.</li>
-                        <li>Ducimus!</li>
+                        <li>Scarica</li>
+                        <li>Perchè Discord</li>
+                        <li>Assistenza</li>
                     </ul>
                 </div>
             </div>
