--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                         <span><a href="#">Sicurezza</a></span>
                         <span><a href="#">Assistenza</a></span>
                     </div>
-                    <button class="button-white">Accedi</button>
+                    <div>
+                        <button class="button-white">Accedi</button>
+                    </div>
                 </nav>
             </div>
 
